--- a/assets/site.css
+++ b/assets/site.css
@@ -1,6 +1,6 @@
 body {
-    font-family: "Helvetica Neue";
+    /* font-family: "Helvetica Neue";
     font-weight: bold;
     font-size: 24px;
-    color: #07c;
+    color: #07c; */
 }
