--- a/views/index.html
+++ b/views/index.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="/static/site.css" />
-        <title>Learning html/template Actions</title>
-    </head>
-    <body>
-        <table border="1">
-            <thead>
-            <tr>
-              <td>ID</td>
-              <td>Name</td>
-              <td>City</td>
-              <td>View</td>
-              <td>Edit</td>
-              <td>Delete</td>
-            </tr>
-             </thead>
-             <tbody>
-          {{ range . }}
-            <tr>
-              <td>{{ .Id }}</td>
-              <td> {{ .Detail }} </td>
-              <td>{{ .Pic }} </td> 
-              <td><a href="/show?id={{ .Id }}">View</a></td>
-              <td><a href="/edit?id={{ .Id }}">Edit</a></td>
-              <td><a href="/delete?id={{ .Id }}">Delete</a><td>
-            </tr>
-          {{ end }}
-             </tbody>
-          </table>
-    </body>
-</html>
+{{define "index"}}
+    {{ template "header" }}
+    <body>    
+      <div class="container">
+        <a href="/new" class="btn btn-primary">New Task</a>
+        
+        <table class="table table-hover" border="1">
+          <thead>
+          <tr>
+            <th>ID</th>
+            <th>Detail</th>
+            <th>PIC</th>
+            <th>Deadline</th>
+            <th>Status</th>             
+            <th>Action</th>             
+          </tr>
+           </thead>
+           <tbody>
+        {{ range . }}
+          <tr>
+            <td>{{ .Id }}</td>
+            <td> {{ .Detail }} </td>
+            <td>{{ .Pic }} </td> 
+            <td>{{ .Deadline }} </td> 
+            <td>{{ .Isdone }} </td>             
+            <td><a href="/edit?id={{ .Id }}">Edit</a></td>             
+          </tr>
+        {{ end }}
+           </tbody>
+        </table>
+      </div>
+        
+    {{ template "footer" }}
+{{end}}
