--- a/views/index.html
+++ b/views/index.html
@@ -1,34 +1,61 @@
 {{define "index"}}
     {{ template "header" }}
     <body>    
-      <div class="container">
-        <a href="/new" class="btn btn-primary">New Task</a>
-        
-        <table class="table table-hover" border="1">
-          <thead>
-          <tr>
-            <th>ID</th>
-            <th>Detail</th>
-            <th>PIC</th>
-            <th>Deadline</th>
-            <th>Status</th>             
-            <th>Action</th>             
-          </tr>
-           </thead>
-           <tbody>
-        {{ range . }}
-          <tr>
-            <td>{{ .Id }}</td>
-            <td> {{ .Detail }} </td>
-            <td>{{ .Pic }} </td> 
-            <td>{{ .Deadline }} </td> 
-            <td>{{ .Isdone }} </td>             
-            <td><a href="/edit?id={{ .Id }}">Edit</a></td>             
-          </tr>
-        {{ end }}
-           </tbody>
-        </table>
-      </div>
-        
+ 
+        <section class="content-header">
+          <h1 class="pull-left">Task List</h1>
+          <h1 class="pull-right">
+             <a class="btn btn-primary pull-right" href="/new">New Task</a>
+          </h1>
+        </section>
+        <div class="content">
+          <div class="clearfix"></div>
+          <div class="box box-primary">
+            <div class="box-body">
+              <table class="table table-hover">
+                <thead>
+                <tr>
+                  <th class="text-center">ID</th>
+                  <th class="text-center">Detail</th>
+                  <th class="text-center">PIC</th>
+                  <th class="text-center">Deadline</th>
+                  <th class="text-center">Status</th>             
+                  <th class="text-center" colspan = 2>Action</th>             
+                </tr>
+                 </thead>
+                 <tbody>
+              {{ range . }}
+                <tr>
+                  <td class="text-center col-sm-1">{{ .Id }}</td>
+                  <td class="text-center col-sm-4"> {{ .Detail }} </td>
+                  <td class="text-center col-sm-2">{{ .Pic }} </td> 
+                  <td class="text-center col-sm-2">{{ .Deadline }} </td> 
+                  <td class="text-center col-sm-1">
+                    {{if .Isdone}}
+                      Done
+                    {{else}}
+                      In Progress
+                    {{end}}
+                  </td>             
+               
+                    {{if .Isdone}}                    
+                    {{else}}
+                    <td class="text-center col-sm-1">                                            
+                      <a class="btn btn-info" href="/edit?id={{ .Id }}">Edit</a>                      
+                    </td>
+                    <td class="text-center col-sm-1">
+                      <a class="btn btn-info" href="/done?id={{ .Id }}">Mark As Done</a>
+                    </td>
+                    {{end}}  
+                  
+                  
+                  
+                </tr>
+              {{ end }}
+                 </tbody>
+              </table>
+            </div>
+          </div>
+        </div>              
     {{ template "footer" }}
 {{end}}
