--- a/views/new.html
+++ b/views/new.html
@@ -3,11 +3,24 @@
 
 <h2>Create New Task</h2>  
 <form method="POST" action="insert">
-  <label> Task Detail </label><input type="text" name="detail" required/><br />
-  <label> Name </label><input type="text" name="pic" required/><br />
-  <label> Deadline </label><input type="date" name="deadline" required/><br />
-  <input type="hidden" name="is_done" value="0">
-  <input type="submit" value="Save Task" />
+  <div class="form-group col-sm-6">
+    <label> Name </label>
+    <input class="form-control" type="text" name="pic" required/>
+  </div>
+  <div class="form-group col-sm-6">
+    <label> Deadline </label>
+    <input class="form-control" type="date" name="deadline" required/>
+  </div>
+  <div class="form-group col-sm-12">
+    <label> Task Detail </label>
+    <input class="form-control" type="text" name="detail" required/>
+  </div>
+  <div class="form-group col-sm-12">
+    <input type="hidden" name="is_done" value="0">
+  </div>
+  <div class="form-group col-sm-12">
+    <input type="submit" value="Save Task" />
+  </div>
 </form>
 {{ template "footer" }}
 {{end}}
