--- a/views/edit.html
+++ b/views/edit.html
@@ -19,12 +19,16 @@
             <label> Status </label>
             <label class="checkbox-inline">
                 {{if .Isdone}}
-                    <input type="checkbox" name="is_done" value="1" checked>
+                    <input name="is_done" type="hidden" value="0">
+                    <input name="is_done" type="checkbox" value="1" checked>
                 {{else}}
-                    <input type="checkbox" name="is_done" value="0">
+                    <input name="is_done" type="hidden" value="0">
+                    <input name="is_done" type="checkbox" value="1">
                 {{end}}             
-                <label>Is Finished</label>
+                Is Finished
             </label>
+
+           
         </div>
        <div class="form-group col-sm-12">
             <input type="submit" value="Save Task" />
