--- a/views/foooter.html
+++ b/views/foooter.html
@@ -1,7 +1,15 @@
 {{define "footer"}}
     </body>
-    <footer>
-        link github
+    
+    <footer class="bg-light text-center text-lg-start">
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+                
+                    <a href="  https://github.com/derryhandoyo/tasklist">
+                        <i class="fa fa-github" style="font-size:56px"></i></i>
+                    </a>
+                
+                <label class="text-reset fw-bold">DTS-PROA GOL3-2</label>
+              </div>         
     </footer>
 </html>
 {{end}}
